name:                conduit-mvar
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bhurt/conduit-mvar#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2016 Brian Hurt
category:            Data, Conduit
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.MVar
  build-depends:       base >= 4.7 && < 5
                        , conduit >= 1.2 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bhurt/conduit-mvar
